Fixed Clear Btn UI

--- a/cv.css
+++ b/cv.css
@@ -374,7 +374,8 @@ span.psw {
 }
 
 
-#loginBtn, #signupBtn, #clearBtn  {
+#clearBtn
+    ,#loginBtn, #signupBtn   {
     background-color: #2d758c;
     color: white;
     padding: 14px 20px;
