Fixed text position of buttons

--- a/cv.css
+++ b/cv.css
@@ -377,7 +377,6 @@ span.psw {
 #loginBtn, #signupBtn, #clearBtn  {
     background-color: #2d758c;
     color: white;
-    padding: 14px 20px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
@@ -385,7 +384,8 @@ span.psw {
     width: 140px;
     height: 40px;
     font-size: 20px;
-    text-align: center; /* Add this line */
+    text-align: center; 
+    box-sizing: border-box;
 }
 
 
