--- a/cv.css
+++ b/cv.css
@@ -7,85 +7,56 @@
 
 #topNav {
     display: flex;
-    min-height: 55px;
+    min-height: 10vh;
     background-color: #1D5A78;
     color: #fff;
     width: 100%;
+    height: 10%;
     align-items: center;
     position: fixed;
     top: 0;
 }
 
-.division {
-    flex: 1;
-    padding: 10px;
-    text-align: center;
+#userProfileContainer {
     display: flex;
     align-items: center;
-}
-
-.left-section {
-    width: 60px;
-    text-align: left;
-    padding: 10px;
-}
-
-.right-section {
-    flex: 2;
-}
-
-.right-section h3 {
-    margin: 10px;
-    text-align: left;
-}
-
-.horizontal-list {
-    list-style-type: none; 
-    padding: 0;
-    display: flex;
-    margin: 0;
-}
-
-.horizontal-list li {
-    margin-right: 20px;
-    padding-right: 20px;
-}
-
-.horizontal-list a {
-    text-decoration: none;
-    font-size: 25px;
-    color: #fff;
+    margin-left: 20px; 
 }
 
 .profile {
-    padding: 10px;
-    width: 60px;
-    height: 60px;
+    padding: 1.5vh;
+    width: 5vw;
+    height: 10vh;
     border-radius: 50%;
 }
 
+#header {
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+}
+
+
 #header_1 {
     display: grid;
-    padding-top: 50px;
+    padding-top: 5vh;
     place-items: left;
     color: #062a3c;
     font-size: 30px;
 }
 
 th {
-    height: 50px;
+    height: 5vh;
     text-align: left;
     font-size: 25px;
-    vertical-align: top; 
+    vertical-align: top;
 }
 
 td {
-    padding-top: 10px;
-   /* padding-right: 10px;*/
+    padding-top: 1vh;
     text-align: left;
     vertical-align: top;
-    font-size: 15px; 
-
+    font-size: 15px;
 }
 
 #table {
@@ -105,7 +76,7 @@ td {
 .skills-list li {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 2vh;
     font-size: 22px;
     color: #062a3c;
 }
@@ -119,21 +90,20 @@ td {
 }
 
 .progress-container {
-    width: 150px;
-    margin-left: 10px;
+    width: 15vw;
+    margin-left: 1vw;
 }
 
 .progress-bar {
-    height: 20px;
+    height: 2vh;
     background-color: #ccc;
-    border-radius: 20px;
+    border-radius: 2vh;
     position: relative;
 }
 
 .progress {
     height: 100%;
-    border-radius: 20px;
-
+    border-radius: 2vh;
     background-color: #2d758c;
 }
 
@@ -141,279 +111,255 @@ td {
     display: flex;
     flex-direction: column;
     align-items: left;
-    padding: 5px;
-
+    padding: 0.5vh;
 }
 
-
 .project-name {
-    font-size: 22px;
+    font-size: 20px;
     color: #062a3c;
-    margin-bottom: 5px;
+    margin-bottom: 1vh;
 }
 
 .language-buttons {
     display: flex;
-    gap: 10px;
+    gap: 1vw;
 }
-
 
 .language-button {
     background-color: #2d758c;
     font-size: 20px;
     color: white;
-    padding: 10px 20px;
+    padding: 1vh 2vw;
     cursor: pointer;
     border: none;
     border-radius: 5px;
 }
 
-.row {
-    display: block;
-    width: 100%;
-}
 
 #dropdown-menu {
     cursor: pointer;
     display: inline-block;
-    height: 100px;
-    padding-top: 20px;
-    line-height: 50px;
-    width: 100hh;
+    line-height: 5vh;
+    width: 100%;
     vertical-align: middle;
-    padding-left: 20px;
     color: white;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 20px;
     text-align: center;
-}
+    position: relative;
+    }
 
 
 #dropdown-menu a {
-    color: #fff; 
+    color: #fff;
     text-decoration: none;
 }
-
 
 .dropdown-content {
     cursor: pointer;
     display: none;
     background: #062a3c;
-    position: relative;
-    min-width: 160px;
-    border-radius: 30px;
-    z-index: 1;
+    position: absolute;
+    min-width: 16vw;
+    border-radius: 3vh;
+    z-index: 2;
     left: 0;
     font-weight: normal;
     font-size: medium;
     text-decoration: none;
+    padding-top: 3px;
+    height: 105px;
 }
 
 #dropdown-menu li {
-
     text-align: left;
-    padding-left: 30px;
+    padding-left: 3vh;
     list-style-type: none;
     color: white;
-    font-size: 25px;
+    font-size: 20px;
+    padding-top: 3px;
 }
 
 #dropdown-menu ul {
     margin: 0;
-
     padding: 0;
 }
 
 #dropdown-menu:hover .dropdown-content {
     display: block;
-    text-emphasis: none;
-    text-decoration: none;
-   
-
 }
 
 #dropdown-menu li:hover {
     background: #26416a;
-    border-radius: 30px;
+    border-radius: 3vh;
 }
-
 
 .gallery {
     position: relative;
     display: inline-block;
-    padding: 10px;
+    padding: 1.5vh;
     width: 100%;
 }
 
-.gallery img{
+
+
+.gallery img {
     max-width: 100%;
     height: auto;
- 
 }
 
-.image-container{
-display: inline;
-
+.image-container {
+    display: inline;
 }
 
 .my-image {
-    
-    height: 300px;
-    width: 300px;
+    height: 20vh;
+    width: 60vh;
     align-items: center;
-    padding: 20px;
+    padding: 2vh;
     transition: transform 0.3s ease;
-    border-radius: 50px;
+    border-radius: 5vh;
 }
 
-
-.my-image:hover  {
+.my-image:hover {
     transform: scale(1.2);
     transform-origin: center center;
-    text-align: center;
-         
-} 
+}
 
-.my-big-image{
+.my-big-image {
     z-index: 5;
-    width:70%;
+    width: 70%;
     position: absolute;
     left: 15%;
     top: 0%;
     display: none;
-    border-radius: 50px;
+    border-radius: 5vh;
 }
 
 .my-image:focus + #my-big-image1,
 .my-image:focus + #my-big-image2,
-.my-image:focus + #my-big-image3{
+.my-image:focus + #my-big-image3 {
     display: block;
 }
 
-p{
+p {
     font-family: monospace;
     font-size: 15px;
 }
 
-.contact{
-    padding-left: 50px;
+.contact {
+    padding-left: 5vw;
 }
 
-.div1{
-    padding: 0px;
+.div1 {
+    padding: 0.5vh;
     display: inline-block;
     width: 30%;
     border: 0;
-    
 }
 
-.content-div{
-    margin: 5px;
+.content-div {
+    margin: 0.5vh;
     color: #062a3c;
-    font-size: 30px;
-    padding: 15px;
+    font-size: 20px;
+    padding: 1.5vh;
     text-align: center;
-    /* border: 2px dashed #2d758c;
-    border-radius: 50px; */
 }
 
-
-.div-fifty-l{
-    padding: 0px;
+.div-fifty-l {
+    padding: 0.5vh;
     float: left;
     width: 50%;
     border: 0;
-    
 }
-.div-fifty-r{
-    padding: 0px;
+
+.div-fifty-r {
+    padding: 0.5vh;
     float: right;
     width: 50%;
     border: 0;
-    
 }
 
-.link-div{
-    margin: 5px;
+.link-div {
+    margin: 0.5vh;
     color: #062a3c;
-    padding: 15px;
+    padding: 1.5vh;
     text-align: center;
-    font-size: 20px;
-      
+    font-size: 25px;
 }
-
 
 #loginBtn:hover {
-  opacity: 0.8;
+    opacity: 0.8;
 }
 
-.inn {
-  text-align: center;
-  position: relative;
-  border-width: 10px;
-  width: 400px;
-  margin: auto;
-  margin-top: 10px;
-  padding: 20px;
-background-color: hsl(200, 61%, 29%, 0.4);
-  border: 2px solid #062a3c;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
 
+.inn {
+    text-align: center;
+    position: relative;
+    border-width: 1vh;
+    width: 30%;
+    margin: auto;
+    margin-top: 2vh;
+    padding: 4vh;
+    background-color: hsl(200, 61%, 29%, 0.4);
+    border: 2px solid #062a3c;
+    border-radius: 2vh;
+    box-shadow: 0 0 2vh rgba(0, 0, 0, 0.9);
 }
 
 .container {
-  position: relative;
-  opacity: 0.9;
+    position: relative;
+    opacity: 0.9;
 }
 
 span.psw {
-  float: center;
-  padding-top: 16px;
+    float: center;
+    padding-top: 1.6vh;
 }
 
-
-#clearBtn
-    ,#loginBtn, #signupBtn   {
+#clearBtn,
+#loginBtn,
+#signupBtn {
     background-color: #2d758c;
     color: white;
-    margin: 8px 0;
+    margin: 0.8vh 0;
     border: 2px solid #062a3c;
     cursor: pointer;
-    border-radius: 50px;
-    width: 140px;
-    height: 40px;
-    font-size: 20px;
-    text-align: center; 
+    border-radius: 5vh;
+    width: 40%;
+    height: 4vh;
+    font-size: 15px;
+    text-align: center;
     box-sizing: border-box;
 }
 
-
-#user,#password,#fullname,#birthday{
+#user,
+#password,
+#fullname,
+#birthday {
     font-size: 20px;
     color: #062a3c;
-    border-radius: solid 50px;
+    border-radius: solid 5vh;
 }
 
- #userDiv{
-    margin-left: 0%;
-    padding-bottom: 0%;
-    margin-bottom: 0%;
-    color:#f4f0f0;
-    font-size:15px;
+#userDiv {
+    position: absolute;
+    right: 0;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    color: #f4f0f0;
+    font-size: 15px;
     width: 20%;
- }
+}
 
- #logOut{
+#logOut {
     text-decoration: none;
-     color: rgb(226, 169, 178);
+    color: rgb(226, 169, 178);
     text-align: right;
- }
+    font-size: 15px;
+}
 
 
-
-
-input[type = radio] {
+input[type=radio] {
     accent-color: #062a3c;
 }
-
